# Carbon-Footprint-Awareness-Platform

./: .gitignore  Dockerfile  README.md  agent_core.py  app.js  index.html  pyproject.toml  requirements.txt  style.css
tests/: conftest.py  test_agent_core.py
